<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.kobich</groupId>
	<artifactId>audiosolutions-core</artifactId>
	<version>9.0</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>17</java.version>
		<log4j2.version>2.21.1</log4j2.version>
		<org.springframework.version>6.0.11</org.springframework.version>
	</properties>
	
	<dependencies>
		<dependency>
			<groupId>de.kobich</groupId>
			<artifactId>component-file</artifactId>
			<version>9.0</version>
		</dependency>
		
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>32.1.3-jre</version>
		</dependency>

		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-collections4</artifactId>
		    <version>4.4</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-text</artifactId>
		    <version>1.11.0</version>
		</dependency>
		
		<dependency>
		    <groupId>org.apache.velocity</groupId>
		    <artifactId>velocity-engine-core</artifactId>
		    <version>2.3</version>
		</dependency>

		<dependency>
		    <groupId>info.schnatterer.musicbrainzws2-java</groupId>
		    <artifactId>musicbrainzws2-java</artifactId>
		    <version>3.0.2</version>
		</dependency>

		<dependency>
		    <groupId>org.apache.httpcomponents</groupId>
		    <artifactId>httpclient</artifactId>
		    <version>4.5.14</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.httpcomponents.client5</groupId>
		    <artifactId>httpclient5</artifactId>
		    <version>5.2.1</version>
		</dependency>

		<dependency>
		    <groupId>net.jthink</groupId>
		    <artifactId>jaudiotagger</artifactId>
		    <version>3.0.1</version>
		</dependency>

		<dependency>
		    <groupId>javazoom</groupId>
		    <artifactId>jlayer</artifactId>
		    <version>1.0.1</version>
		</dependency>
		<dependency>
		    <groupId>com.sun</groupId>
		    <artifactId>mp3plugin</artifactId>
		    <version>1.0.0</version>
		</dependency>

		<dependency>
		    <groupId>org.jsoup</groupId>
		    <artifactId>jsoup</artifactId>
		    <version>1.16.2</version>
		</dependency>

		<dependency>
		    <groupId>jakarta.persistence</groupId>
		    <artifactId>jakarta.persistence-api</artifactId>
		    <version>3.0.0</version>
		</dependency>
		<dependency>
		    <groupId>jakarta.transaction</groupId>
		    <artifactId>jakarta.transaction-api</artifactId>
		    <version>2.0.1</version>
		</dependency>

		<dependency>
		    <groupId>org.hibernate</groupId>
		    <artifactId>hibernate-core</artifactId>
		    <version>6.1.7.Final</version>
		</dependency>

		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-context</artifactId>
		    <version>${org.springframework.version}</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-orm</artifactId>
		    <version>${org.springframework.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-tx</artifactId>
		    <version>${org.springframework.version}</version>
		    <scope>compile</scope>
		</dependency>

		<dependency>
		    <groupId>org.springframework.data</groupId>
		    <artifactId>spring-data-jpa</artifactId>
		    <version>3.0.11</version>
		</dependency>

		<dependency>
		    <groupId>com.atomikos</groupId>
		    <artifactId>transactions-jta</artifactId>
		    <version>6.0.0</version>
		    <classifier>jakarta</classifier>
		</dependency>
        <dependency>
            <groupId>com.atomikos</groupId>
            <artifactId>transactions-jdbc</artifactId>
            <version>6.0.0</version>
        </dependency>

		<dependency>
		    <groupId>org.hsqldb</groupId>
		    <artifactId>hsqldb</artifactId>
		    <version>2.7.1</version>
		</dependency>

		
		<!-- Testing -->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-test</artifactId>
		    <version>3.1.5</version>
		    <scope>test</scope>
		    <exclusions>
			    <exclusion>
			        <groupId>org.springframework.boot</groupId>
			        <artifactId>spring-boot-starter-logging</artifactId>
			    </exclusion>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.5.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>5.5.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-log4j12</artifactId>
		    <version>2.0.9</version>
		    <scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
            </plugin>			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>${java.version}</release>
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>java.net.http</arg>
					</compilerArgs>
					<forceJavacCompilerUse>true</forceJavacCompilerUse>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
